inglish to castellano settings

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -65,12 +65,12 @@ const { activeNav } = Astro.props;
           </li>
           <li>
             <a href="/tags" class={activeNav === "tags" ? "active" : ""}>
-              Tags
+              Etiquetas
             </a>
           </li>
           <li>
             <a href="/about" class={activeNav === "about" ? "active" : ""}>
-              About
+              Sobre Mi
             </a>
           </li>
           <li>
