--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -39,7 +39,7 @@ const tagPosts = getPostsByTag(posts, tag);
   <Header activeNav="tags" />
   <Main
     pageTitle={`Tag:${tag}`}
-    pageDesc={`All the articles with the tag "${tag}".`}
+    pageDesc={`Todos los articulos con el tag "${tag}".`}
   >
     <ul>
       {
