header text espaniol

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        Hi my name is Emmanuel Heredia and this blog is where i will share all my self taught  
+        Mi nombre es Emmanuel Heredia y este blog lo hice para crear artículos dedicados al mundo tecnológico. Acá vas a encontrar artículos sobre programación, proyectos, experiencias, electrónica y sobre cosas divulgación científica. Mi objetivo es que vos como lector puedas comprender un poco este mundo inmenso.
       </p>
       <p>
         Read the blog posts or check
